--- a/privacy.html
+++ b/privacy.html
@@ -1,14 +1,22 @@
 <!doctype html><html lang="es"><meta charset="utf-8">
 <title>Política de Privacidad - lab6_20203266</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<main style="max-width:800px;margin:40px auto;font-family:system-ui;">
+<main style="max-width:800px;margin:40px auto;font-family:system-ui;line-height:1.5">
 <h1>Política de Privacidad</h1>
-<p>Esta aplicación (lab6_20203266) usa Firebase Authentication para iniciar sesión con correo y proveedores como Google y Facebook.</p>
+<p>Esta aplicación (lab6_20203266) utiliza Firebase Authentication para iniciar sesión con correo y proveedores como Google y Facebook, y Firestore para almacenar tareas.</p>
+<h2>Datos que tratamos</h2>
 <ul>
-  <li>Datos recogidos: email, nombre (si el proveedor lo provee) y un identificador único (UID).</li>
-  <li>Uso: autenticación de usuarios y sincronización de tareas en la nube (Firestore).</li>
-  <li>Conservación: mientras mantengas tu cuenta activa o hasta que solicites su eliminación.</li>
-  <li>Compartición: no vendemos datos; se comparten solo con proveedores necesarios (Firebase/Google, Meta) para la autenticación.</li>
+  <li>Email y nombre (cuando el proveedor lo entrega) y un identificador único (UID).</li>
+  <li>Datos de uso mínimos para mejorar el servicio.</li>
 </ul>
-<p>Contacto: <a href="mailto:jeffersonvial07@gmail.com">jeffersonvial07@gmail.com</a></p>
+<h2>Finalidades</h2>
+<ul>
+  <li>Autenticar usuarios y sincronizar tareas en la nube.</li>
+</ul>
+<h2>Conservación</h2>
+<p>Mientras mantengas tu cuenta activa o hasta que solicites su eliminación.</p>
+<h2>Compartición</h2>
+<p>No vendemos datos. Se comparten con proveedores necesarios (Google/Firebase y Meta) para la autenticación.</p>
+<h2>Contacto</h2>
+<p><a href="mailto:jeffersonvial07@gmail.com">jeffersonvial07@gmail.com</a></p>
 </main></html>
